# cursor-memory-mcp

./: .coverage  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  coverage.xml  pyproject.toml  smithery.yaml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  lint.yml  publish.yml  security.yml
src/cursor_memory_mcp/: __init__.py  server.py
tests/: __init__.py  conftest.py  test_cursor_memory_mcp.py  test_edge_cases.py  test_mcp_tools.py  test_runner.py  test_server.py
